(executable
 (name frontend)
 (modules frontend)
 (modes native)
 (libraries
  grpc
  grpc-lwt
  ocaml-protoc-plugin
  lwt
  lwt.unix
  raftkv
  h2
  h2-lwt-unix))

(executable
 (name server)
 (modules server)
 (modes native)
 (libraries
  grpc
  grpc-lwt
  ocaml-protoc-plugin
  lwt
  lwt.unix
  raftkv
  h2
  h2-lwt-unix))
