(executable
 (name test_frontend_get)
 (libraries
  grpc
  grpc-lwt
  ocaml-protoc-plugin
  lwt
  lwt.unix
  raftkv
  h2
  h2-lwt-unix))

(executable
 (name test_frontend_put)
 (libraries
  grpc
  grpc-lwt
  ocaml-protoc-plugin
  lwt
  lwt.unix
  raftkv
  h2
  h2-lwt-unix))

(executable
 (name test_frontend_start_raft)
 (libraries
  grpc
  grpc-lwt
  ocaml-protoc-plugin
  lwt
  lwt.unix
  raftkv
  h2
  h2-lwt-unix))

(executable
  (name test_server_request_vote)
  (libraries
    grpc
    grpc-lwt
    ocaml-protoc-plugin
    lwt
    lwt.unix
    raftkv
    h2
    h2-lwt-unix))

(executable
  (name test_server_append_entries)
  (libraries
    grpc
    grpc-lwt
    ocaml-protoc-plugin
    lwt
    lwt.unix
    raftkv
    h2
    h2-lwt-unix))

(executable
  (name test_server_put)
  (libraries
    grpc
    grpc-lwt
    ocaml-protoc-plugin
    lwt
    lwt.unix
    raftkv
    h2
    h2-lwt-unix))
